--- a/FRAPPE.html
+++ b/FRAPPE.html
@@ -598,7 +598,7 @@ nav ul li a {
     </div>
 
     <div class="button-container">
-        <a href="icedcoffee.html" class="menu-button">Iced Coffee</a>
+        <a href="ICEDCOFFEE.html" class="menu-button">Iced Coffee</a>
         <a href="HOTCOFFEE.html" class="menu-button">Hot Coffee</a>
         <a href="FRAPPE.html" class="menu-button">Frappe</a>
         <a href="DESSERT.html" class="menu-button">Dessert</a>
