--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ nav ul li a {
             <h1>Start Your Day with the Perfect Cup</h1>
             <p>Enjoy the rich and delicious taste of every cup. Whether you need energy in the morning or a relaxing break, our coffee is made to satisfy your cravings and refresh your day.</p>
             <div class="buttons">
-                <a href="icedcoffee.html" class="btn order">View Menu</a>
+                <a href="ICEDCOFFEE.html" class="btn order">View Menu</a>
             </div>
         </div>
         <img src="clogo.png" alt="Delicious Coffee"> 
